--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "jest": "^29.0.0",
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
