--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=jibietr_ScheduleSync
 sonar.organization=jibietr
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov1.info
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=ScheduleSync
